<resources>
    <string name="app_name">OptiSheet</string>
    <string name="action_donate">Charactersheet</string>
    <string name="action_report">Vault</string>
    <string name="donateTitle">Charactersheet Creator</string>
    <string name="donateSubtitle">Select your class!</string>
    <string name="donateButton">Save</string>
    <string name="barbarian">Barbarian</string>
    <string name="bard">Bard</string>
    <string name="cleric">Cleric</string>
    <string name="druid">Druid</string>
    <string name="fighter">Fighter</string>
    <string name="monk">Monk</string>
    <string name="paladin">Paladin</string>
    <string name="ranger">Ranger</string>
    <string name="rogue">Rogue</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="warlock">Warlock</string>
    <string name="wizard">Wizard</string>
    <string name="amount">Level</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Level</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OptiSheet</string>
    <string name="nav_header_subtitle">jack@scallan.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_donate">Charactersheet</string>
    <string name="menu_report">Vault</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="aboutus_title">Abouts Us</string>
    <string name="aboutus_message">Empty text</string>

    <string name="messageLoading">Connecting to the Server...</string>

    <string name="action_edit">Edit Charactersheet</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Charactersheet Details</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Login</string>

    <string name="menu_report_all">Public Vault</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="sign_in_google">Google Sign In</string>
    <string name="sign_in_email">Email Sign In</string>
    <string name="sign_in_phone">Phone Sign In</string>
    <!--END Firebase Resources-->
</resources>
